--- a/Api/composer.json
+++ b/Api/composer.json
@@ -98,6 +98,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
+        "squizlabs/php_codesniffer": "^3.13",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
         "symfony/debug-bundle": "7.3.*",
